<resources>
    <string name="app_name">tip-calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good">Good (10%)</string>
    <string name="average_10">Average (10%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>